# userver-mre

./: .gitignore  CMakeLists.txt  README.md
configs/: static_config.yaml
src/: main.cpp
src/handlers/bye/: bye.cpp  bye.hpp
src/handlers/hello/: hello.cpp  hello.hpp
